--- a/example/res/values/strings.xml
+++ b/example/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="app_name">example</string>
 
     <!-- Remote config -->
-    <string name="rc_config_location">http://static.radio.com/mobile/radiocom.json</string>
+    <string name="rc_config_location">https://raw.github.com/gangverk/Android-RemoteConfig/master/example/remote_rc.json</string>
     <integer name="rc_config_update_interval">86400000</integer> <!-- Update interval in milliseconds -->
 
 </resources>
